[gd_scene load_steps=16 format=3 uid="uid://4cnqxvch4tiu"]

[ext_resource type="Script" uid="uid://bbj335oquo0wr" path="res://src/ui/dialog.gd" id="1_w57b2"]
[ext_resource type="Texture2D" uid="uid://dlt68e1g32tuo" path="res://src/graphics/ui/dialog_body.png" id="2_ed87t"]
[ext_resource type="Texture2D" uid="uid://dtn43y26868gw" path="res://src/graphics/ui/dialog_border_corner.png" id="2_giu5r"]
[ext_resource type="Texture2D" uid="uid://b273qn5moosgd" path="res://src/graphics/ui/dialog_border_body.png" id="3_ibufv"]
[ext_resource type="Texture2D" uid="uid://b7hkwqjw3rvq2" path="res://src/graphics/faces/niko.png" id="5_y3m2j"]
[ext_resource type="Texture2D" uid="uid://c5pw1h14buvyd" path="res://src/graphics/ui/dialog_cursor.png" id="6_w5dtp"]
[ext_resource type="PackedScene" uid="uid://cgqw705l1bpnf" path="res://src/ui/dialog_option.tscn" id="7_0ectb"]
[ext_resource type="AudioStream" uid="uid://c07ah6qa3nkpt" path="res://src/audios/sound_effect/text.wav" id="8_vkn3r"]
[ext_resource type="AudioStream" uid="uid://dycjyqqjw103b" path="res://src/audios/sound_effect/text_robot.wav" id="9_2uhyo"]

[sub_resource type="Animation" id="Animation_0ectb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_w5dtp"]
resource_name = "float"
length = 0.5
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ectb"]
_data = {
&"RESET": SubResource("Animation_0ectb"),
&"float": SubResource("Animation_w5dtp")
}

[sub_resource type="Animation" id="Animation_2uhyo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vkn3r"]
resource_name = "fade_in"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2uhyo"]
_data = {
&"RESET": SubResource("Animation_2uhyo"),
&"fade_in": SubResource("Animation_vkn3r")
}

[node name="Dialog" type="CanvasLayer"]
script = ExtResource("1_w57b2")
metadata/_edit_vertical_guides_ = [427.0]

[node name="Control" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Dialog" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -142.0
offset_right = -48.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_lock_ = true

[node name="Body" type="Control" parent="Control/Dialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Background" type="TextureRect" parent="Control/Dialog/Body"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 750.0
offset_bottom = 102.0
texture = ExtResource("2_ed87t")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Cornor_1" type="TextureRect" parent="Control/Dialog/Body"]
layout_mode = 0
offset_right = 10.0
offset_bottom = 10.0
texture = ExtResource("2_giu5r")
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="Cornor_2" type="TextureRect" parent="Control/Dialog/Body"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -10.0
offset_right = 10.0
grow_vertical = 0
texture = ExtResource("2_giu5r")
expand_mode = 1
stretch_mode = 5
flip_v = true
metadata/_edit_lock_ = true

[node name="Cornor_3" type="TextureRect" parent="Control/Dialog/Body"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -10.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("2_giu5r")
expand_mode = 1
stretch_mode = 5
flip_h = true
flip_v = true
metadata/_edit_lock_ = true

[node name="Cornor_4" type="TextureRect" parent="Control/Dialog/Body"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -10.0
offset_bottom = 10.0
grow_horizontal = 0
texture = ExtResource("2_giu5r")
expand_mode = 1
stretch_mode = 5
flip_h = true
metadata/_edit_lock_ = true

[node name="Border_1" type="TextureRect" parent="Control/Dialog/Body"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_right = -10.0
offset_bottom = 10.0
grow_horizontal = 2
texture = ExtResource("3_ibufv")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Border_3" type="TextureRect" parent="Control/Dialog/Body"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 748.0
offset_right = 728.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 0
rotation = 3.14159
texture = ExtResource("3_ibufv")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Border_2" type="TextureRect" parent="Control/Dialog/Body"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 100.0
offset_right = 90.0
grow_vertical = 2
rotation = -1.57079
texture = ExtResource("3_ibufv")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Border_4" type="TextureRect" parent="Control/Dialog/Body"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = -90.0
grow_horizontal = 0
grow_vertical = 2
rotation = 1.57079
texture = ExtResource("3_ibufv")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Face" type="TextureRect" parent="Control/Dialog"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -94.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 94.0
grow_horizontal = 0
texture = ExtResource("5_y3m2j")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Control/Dialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 18.0
offset_right = -110.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
text = "无论走到哪里，都应该记住，过去都是假的，回忆是一条没有尽头的路，一切以往的春天都不复存在，就连那最坚韧而又狂乱的爱情归根结底也不过是一种转瞬即逝的现实。
"
autowrap_mode = 3
clip_text = true
visible_characters = 9
visible_ratio = 0.12987

[node name="Cursor" type="Sprite2D" parent="Control/Dialog"]
position = Vector2(379, 101)
texture = ExtResource("6_w5dtp")
hframes = 2
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Dialog/Cursor"]
libraries = {
&"": SubResource("AnimationLibrary_0ectb")
}
autoplay = "float"

[node name="Options" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = 169.0
offset_right = -56.0
offset_bottom = -249.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogOption1" parent="Control/Options" instance=ExtResource("7_0ectb")]
layout_mode = 1

[node name="DialogOption2" parent="Control/Options" instance=ExtResource("7_0ectb")]
layout_mode = 1
offset_top = 31.0
offset_bottom = 62.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2uhyo")
}

[node name="AudioStreamPlayer_Text" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_vkn3r")

[node name="AudioStreamPlayer_TextRobot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_2uhyo")
